eglibc (2.11.2-8) UNRELEASED; urgency=low

  [ Clint Adams ]
  * Japanese debconf translation update from Nobuhiro Iwamatsu.
    closes: #604752.

  [ Samuel Thibault ]
  * Add expected gettext failure on hurd-i386.

 -- Samuel Thibault <sthibault@debian.org>  Fri, 03 Dec 2010 00:47:48 +0100

eglibc (2.11.2-7) unstable; urgency=low

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-sendmsg-leak.diff: New upstream patch from Emilio
    Pozuelo Monfort to fix a memory leak on the error path of sendmsg.
  * patches/hurd-i386/local-sendmsg-SCM_RIGHTS.diff: New patch from Emilio
    Pozuelo Monfort to implement SCM_RIGHTS in sendmsg().

  [ Aurelien Jarno ]
  * Update Portuguese debconf translation, by Pedro Ribeiro.  Closes: #597348.
  * Add any/submitted-origin.diff from Andreas Schwab to forbid the use
    of $ORIGIN in privileged programs. Add any/cvs-audit-suid.diff to
    only load SUID audit objects in SUID binaries. Fix CVE-2010-3847.
    Closes: #600667.
  * Update Catalan debconf translation, by Jordi Mallach. Closes: #601085.
  * Update Vietnamese debconf translation, by Clytie Siddall.  Closes:
    #601531.
  * Add arm/local-sigaction.diff to match sigaction with SA_RESTORER
    behaviour with other architectures.  Closes: #595403.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 30 Oct 2010 18:15:54 +0200

eglibc (2.11.2-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update Arabic debconf translation, by Ossama Khayat.  Closes: #596161.
  * libc6-i386: remplace <= breaks by << breaks now that the transitioned
    version of the packages is known.  Closes: #566720.
  * kfreebsd/local-linuxthreads29.diff: correctly disable SO_CLOEXEC
    support when it is not available.  Closes: #596367.
  * update-locale: if LANGUAGE is not compatible with the selected default
    locale, emit a warning and disable it instead of failing.
    Closes: #596695.
  * Add armhf support.  Closes: #596804.
  * any/submitted-resolv.conf-thread.diff: new patch to correctly reload