@@ -1,10 +1,14 @@
+2011-01-12  Aurelien Jarno  <aurelien@aurel32.net>
+
+	* locales/et_EE: Change currency to euro.
+
 2010-01-05  Aurelien Jarno  <aurelien@aurel32.net>
 
 	* locales/et_EE: Change first_weekday and first_workday to 2.
 
 ---
- localedata/locales/et_EE |    4 ++--
- 1 file changed, 2 insertions(+), 2 deletions(-)
+ localedata/locales/et_EE |    8 ++--
+ 1 file changed, 4 insertions(+), 4 deletions(-)
 
 --- a/localedata/locales/et_EE
 +++ b/localedata/locales/et_EE
@@ -17,5 +21,14 @@
 +first_weekday 2
 +first_workday 2
  END LC_TIME
+@@ -2128,8 +2128,8 @@
+ END LC_CTYPE
  
- LC_MESSAGES
+ LC_MONETARY
+-int_curr_symbol     "<U0045><U0045><U004B><U0020>"
+-currency_symbol     "<U006B><U0072>"
++int_curr_symbol     "<U0045><U0055><U0052><U0020>"
++currency_symbol     "<U20AC>"
+ mon_decimal_point   "<U002C>"
+ mon_thousands_sep   "<U00A0>"
+ mon_grouping        3;3
