@@ -7,7 +7,11 @@ eglibc (2.11.2-8) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Add expected gettext failure on hurd-i386.
 
- -- Samuel Thibault <sthibault@debian.org>  Fri, 03 Dec 2010 00:47:48 +0100
+  [ Aurelien Jarno ]
+  * Update patches/localedata/locale-et_EE.diff to switch Estonian currency
+    to euro. Closes: #608803.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 12 Jan 2011 14:59:38 +0100
 
 eglibc (2.11.2-7) unstable; urgency=low
 
